@@ -12,6 +12,8 @@ Version 4.0.11
    patch: Wenxin Wang
  * Fix: accumulating families when using multiple peers
    patch: Martin Topholm (reviewed)
+ * Fix: could not reload configuration
+   reported by: gbock
 
 Version 4.0.10
  * Feature: Add decoding for Mac Mobility
